<resources>
    <string name="app_name">BnB Movies</string>
    <string name="email">Email</string>
    <string name="pass">Password</string>
    <string name="loginbtn">Login</string>
    <string name="regbtn">Register</string>
    <string name="title">BnB Movies</string>
    <string name="title_activity_navigator">NavigatorActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">BnB Movies</string>
    <string name="nav_header_subtitle">www.BnBmovies.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_movies">Movies</string>
    <string name="menu_halls">Cinema Halls</string>
    <string name="menu_seats">Seats</string>
    <string name="menu_contact">Contact</string>
    <string name="menu_location">Location</string>
    <string name="menu_logout">Logout</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>

</resources>

