<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_movie_black_24dp"
            android:title="@string/menu_movies" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_halls" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_airline_seat_recline_normal_black_24dp"
            android:title="@string/menu_seats" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_contact_phone_black_24dp"
            android:title="@string/menu_contact" />
    </group>

    <item android:title="Others">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="@string/menu_setting" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_error_outline_black_24dp"
                android:title="@string/menu_logout" />
        </menu>
    </item>

</menu>
